# VisionDataModelsV1.0

original-alex/data-river/: CMakeLists.txt  DataRiver.xml  thing-data-configs-linux.h  thing-data-configs-win.h  thing-data-configs.h
original-alex/data-river/config/1.0/: AcknowledgeThingInProperties.json  AcknowledgeThingOutProperties.json  AlarmThingInProperties.json  AlarmThingOutProperties.json  BinaryArtifactThingInProperties.json  BinaryArtifactThingOutProperties.json  CameraConnectRequestThingInProperties.json  CameraConnectRequestThingOutProperties.json  CameraDataCodesThingInProperties.json  CameraDataCodesThingOutProperties.json  ClassificationThingInProperties.json  ClassificationThingOutProperties.json  ConfigActualThingInProperties.json  ConfigActualThingOutProperties.json  ConfigRequestThingInProperties.json  ConfigRequestThingOutProperties.json  DetectionBoxThingInProperties.json  DetectionBoxThingOutProperties.json  DetectionPointThingInProperties.json  DetectionPointThingOutProperties.json  DeviceErrorThingInProperties.json  DeviceErrorThingOutProperties.json  DeviceInfoThingInProperties.json  DeviceInfoThingOutProperties.json  EngineConfigThingInProperties.json  EngineConfigThingOutProperties.json  EngineInfoThingInProperties.json  EngineInfoThingOutProperties.json  ModelReceiverStatusThingInProperties.json  ModelReceiverStatusThingOutProperties.json  OutputTensorThingInProperties.json  OutputTensorThingOutProperties.json  PackageUpdateThingInProperties.json  PackageUpdateThingOutProperties.json  PalletManifestThingInProperties.json  PalletManifestThingOutProperties.json  PalletRequestThingInProperties.json  PalletRequestThingOutProperties.json  PerformanceThingInProperties.json  PerformanceThingOutProperties.json  (+6 more)
original-alex/data-river/definitions/TagGroup/com.adlinktech.smartpallet/1.0/: DatabaseStatusTagGroup.json  PackageUpdateTagGroup.json  PalletManifestTagGroup.json  PalletRequestTagGroup.json
original-alex/data-river/definitions/ThingClass/com.adlinktech.smartpallet/1.0/: CameraDataCodesThingInClass.json  CameraDataCodesThingOutClass.json  PackageUpdateThingInClass.json  PackageUpdateThingOutClass.json  PalletManifestThingInClass.json  PalletManifestThingOutClass.json  PalletRequestThingInClass.json  PalletRequestThingOutClass.json
original-alex/data-river/definitions/ThingClass/com.adlinktech.vision/1.0/: AcknowledgeThingInClass.json  AcknowledgeThingOutClass.json  AlarmThingInClass.json  AlarmThingOutClass.json  BinaryArtifactThingInClass.json  BinaryArtifactThingOutClass.json  CameraConnectRequestThingInClass.json  CameraConnectRequestThingOutClass.json  ClassificationThingInClass.json  ClassificationThingOutClass.json  ConfigActualThingInClass.json  ConfigActualThingOutClass.json  ConfigRequestThingInClass.json  ConfigRequestThingOutClass.json  DetectionBoxThingInClass.json  DetectionBoxThingOutClass.json  DetectionPointThingInClass.json  DetectionPointThingOutClass.json  DeviceErrorThingInClass.json  DeviceErrorThingOutClass.json  DeviceInfoThingInClass.json  DeviceInfoThingOutClass.json  EngineConfigThingInClass.json  EngineConfigThingOutClass.json  EngineInfoThingInClass.json  EngineInfoThingOutClass.json  ModelReceiverStatusThingInClass.json  ModelReceiverStatusThingOutClass.json  VideoFrameThingInClass.json  (+9 more)
vizi-ai-apps/protobuf/: CMakeLists.txt  common.proto  compile.sh  config.proto  data-interfaces.proto  device.proto  smart-pallet.proto
vizi-ai-apps/protobuf-models/: CMakeLists.txt
vizi-ai-apps/protobuf-models/include/vision-protobuf-data-models/: models.h
(+142 files in other folders)
